[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://character/player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Ground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Environment/ObstacleGenerator.tscn" type="PackedScene" id=4]
[ext_resource path="res://world.gd" type="Script" id=5]
[ext_resource path="res://UI/Hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/MenuLayer.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 244, 30 )

[node name="world" type="Node2D"]
script = ExtResource( 5 )

[node name="Hud" parent="." instance=ExtResource( 6 )]

[node name="MenuLayer" parent="." instance=ExtResource( 7 )]

[node name="BackGround" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="ObstacleGenerator" parent="." instance=ExtResource( 4 )]
position = Vector2( 400, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 80, 380 )

[node name="Ground" parent="." instance=ExtResource( 3 )]
z_index = 5

[node name="UpperDeathZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperDeathZone"]
position = Vector2( 234, -26 )
shape = SubResource( 1 )

[connection signal="started" from="MenuLayer" to="." method="_on_MenuLayer_started"]
[connection signal="GameStarted" from="player" to="." method="_on_player_GameStarted"]
[connection signal="died" from="player" to="." method="_on_player_died"]
[connection signal="body_entered" from="Ground/DeathZone" to="." method="_on_DeathZone_body_entered"]
[connection signal="body_entered" from="UpperDeathZone" to="." method="_on_UpperDeathZone_body_entered"]

[editable path="Ground"]
